@@ -45,6 +45,7 @@ import java.io.StringReader;
 import java.lang.reflect.InvocationTargetException;
 import java.math.BigDecimal;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -4734,7 +4735,7 @@ public final class Utility {
 		// derived from the social.properties redirect value
 		try {
 			String redirectUrlStr = SocialPropertiesUtil.getInstance().getProperty("redirect");
-			URL redirectUrl = new URL(redirectUrlStr);
+			URL redirectUrl = new URI(redirectUrlStr).toURL();
 			String protocol = redirectUrl.getProtocol();
 			int port = redirectUrl.getPort();
 			String host = redirectUrl.getHost();
@@ -4743,7 +4744,7 @@ public final class Utility {
 			} else {
 				return protocol + "://" + host;
 			}
-		} catch (MalformedURLException e) {
+		} catch (URISyntaxException | MalformedURLException e) {
 			classLogger.warn("Invalid redirect URL in social.properties for redirect");
 			classLogger.error(Constants.STACKTRACE, e);
 		}
@@ -6125,10 +6126,9 @@ public final class Utility {
 
 	/**
 	 * Returns true only if the folder contains at least one direct non-directory
-	 * file.
-	 * Use this when you specifically need to confirm flat files exist (e.g.,
-	 * validating
-	 * that a folder has been populated with data files, not just sub-folders).
+	 * file. Use this when you specifically need to confirm flat files exist (e.g.,
+	 * validating that a folder has been populated with data files, not just
+	 * sub-folders).
 	 */
 	public static boolean folderHasAnyFiles(String folderPath) {
 		File folder = new File(folderPath);
@@ -6141,14 +6141,11 @@ public final class Utility {
 	}
 
 	/**
-	 * Returns true if the folder exists and contains any entries — files, s
-	 * b-directories,
-	 * hidden files, dot files, etc. Use this when you just need to know the folder
-	 * is
-	 * non-empty regardless of whether its contents are files or directories (e.g.,
-	 * before
-	 * syncing a room folder to cloud storage where the room may store data in
-	 * sub-directories).
+	 * Returns true if the folder exists and contains any entries — files,
+	 * sub-directories, hidden files, dot files, etc. Use this when you just need to
+	 * know the folder is non-empty regardless of whether its contents are files or
+	 * directories (e.g., before syncing a room folder to cloud storage where the
+	 * room may store data in sub-directories).
 	 */
 	public static boolean folderIsNotEmpty(String folderPath) {
 		File folder = new File(folderPath);
